data/derived/comb/progs/unify/prog0985.ml.out
Characters 29-38:
  wwhile ((f, true),b);;
          ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
